--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -11,7 +11,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helve
   padding: 0.75rem;
 }
 .sign-up-form:focus, .sign-up-form:hover{
-  transition:.4s ease-out;
+  transition:.1s ease-in;
   border: 1px solid #0094ED;
   border-right: 0px;
   box-shadow: inset 0px 0px 0px 1px #0094ED;
